fix: fix broken index.css

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @import "tailwindcss/utilities";
 
-*{  margin: 0;
-  padding: 0;
+*, *::before, *::after{
+	box-sizing: border-box;
 }
